<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:enabled="true"
        android:id="@+id/buttom_nav_item_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/menu_bottom_nav_title_home"/>

    <item
        android:enabled="true"
        android:id="@+id/buttom_nav_item_calendar"
        android:icon="@drawable/ic_tab_calendar"
        android:title="@string/menu_bottom_nav_title_calendar"/>

   <!-- <item
        android:enabled="true"
        android:id="@+id/buttom_nav_item_fav"
        android:icon="@drawable/ic_tab_fav"
        android:title="@string/menu_bottom_nav_title_fav"/> -->

    <item
        android:enabled="true"
        android:id="@+id/buttom_nav_item_more"
        android:icon="@drawable/ic_tab_more"
        android:title="@string/menu_bottom_nav_title_plus"/>

</menu>