<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_normal"
    android:paddingBottom="@dimen/dimen_none"
    android:paddingLeft="@dimen/dimen_big"
    android:paddingRight="@dimen/dimen_big"
    android:paddingTop="@dimen/dimen_normal"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/dimen_small"
    app:cardElevation="@dimen/dimen_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        card_view:layout_height="match_parent"
        card_view:layout_width="match_parent">

        <TextView
            android:id="@+id/tv_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_normal"
            android:padding="@dimen/dimen_small"
            android:text="@string/lorem_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_bigger"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_small"
                    android:layout_weight="1"
                    android:padding="@dimen/dimen_normal"
                    android:text="@string/start"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_event_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_small"
                    android:layout_weight="4"
                    android:padding="@dimen/dimen_normal"
                    android:text="@string/lorem_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_big" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/dimen_xx"
                android:layout_gravity="center_horizontal"
                android:background="@color/grey_400" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_small"
                    android:layout_weight="1"
                    android:padding="@dimen/dimen_normal"
                    android:text="@string/end"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_event_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_small"
                    android:layout_weight="4"
                    android:padding="@dimen/dimen_normal"
                    android:text="@string/lorem_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_big" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>

